--- a/ai-agent-backend/requirements.txt
+++ b/ai-agent-backend/requirements.txt
@@ -1,15 +1,206 @@
+accelerate==1.5.2
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.14
+aiosignal==1.3.2
+amqp==5.1.1
+annotated-types==0.7.0
+anyio==4.9.0
+asgiref==3.6.0
+asttokens==2.4.1
+async-timeout==4.0.2
+attrs==25.3.0
+azure-core==1.26.3
+azure-storage-blob==12.15.0
+bcrypt==4.3.0
+billiard==3.6.4.0
+build==1.0.3
+CacheControl==0.13.1
+celery==5.2.7
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+cleo==2.1.0
 click==8.1.8
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
 colorama==0.4.6
+comm==0.2.1
+contourpy==1.3.0
+crashtest==0.4.1
+cron_descriptor==1.2.35
+cryptography==39.0.2
+cycler==0.12.1
+datasets==3.5.0
+debugpy==1.8.0
+decorator==5.1.1
+defusedxml==0.7.1
+diff-match-patch==20200713
+dill==0.3.8
+distlib==0.3.7
+Django==4.1.7
+django-autocomplete-light==3.9.4
+django-celery-beat==2.5.0
+django-ckeditor==6.5.1
+django-crispy-forms==1.14.0
+django-environ==0.9.0
+django-extensions==3.2.3
+django-filter==22.1
+django-import-export==3.1.0
+django-js-asset==2.0.0
+django-multiselectfield==0.1.12
+django-phonenumber-field==7.0.2
+django-storages==1.13.2
+django-taggit==3.1.0
+django-timezone-field==5.0
+django-tinymce==3.6.0
 dnspython==2.7.0
-exceptiongroup==1.2.2
+dulwich==0.21.6
+email_validator==2.2.0
+et-xmlfile==1.1.0
+exceptiongroup==1.2.0
+executing==2.0.1
 fastapi==0.115.12
+fastapi-cli==0.0.7
+fastjsonschema==2.18.1
+filelock==3.13.1
+fonttools==4.56.0
+frozenlist==1.5.0
+fsspec==2024.12.0
 h11==0.14.0
-idna==3.10
+h2==4.1.0
+hpack==4.0.0
+httpcore==1.0.7
+httptools==0.6.4
+httpx==0.28.1
+huggingface-hub==0.29.3
+hypercorn==0.14.3
+hyperframe==6.0.1
+idna==3.4
+importlib-metadata==6.8.0
+importlib_resources==6.5.2
+installer==0.7.0
+ipykernel==6.29.2
+ipython==8.18.1
+isodate==0.6.1
+itsdangerous==2.2.0
+jaraco.classes==3.3.0
+jedi==0.19.1
+Jinja2==3.1.6
+joblib==1.4.2
+jupyter_client==8.6.0
+jupyter_core==5.7.1
+jwt==1.3.1
+keyring==24.2.0
+kiwisolver==1.4.7
+kombu==5.2.4
+markdown-it-py==3.0.0
+MarkupPy==1.14
+MarkupSafe==3.0.2
+matplotlib==3.9.4
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+more-itertools==10.1.0
 motor==3.7.0
+mpmath==1.3.0
+msgpack==1.0.7
+multidict==6.2.0
+multiprocess==0.70.16
+nest-asyncio==1.6.0
+networkx==3.2.1
+numpy==2.0.2
+oauthlib==3.2.2
+odfpy==1.4.1
+openpyxl==3.1.2
+orjson==3.10.16
+packaging==23.2
+pandas==2.2.3
+parso==0.8.3
+passlib==1.7.4
+pexpect==4.8.0
+phonenumbers==8.13.7
+Pillow==9.4.0
+pkginfo==1.9.6
+platformdirs==3.11.0
+poetry==1.7.0
+poetry-core==1.8.1
+poetry-plugin-export==1.6.0
+priority==2.0.0
+prompt-toolkit==3.0.38
+propcache==0.3.1
+psutil==5.9.8
+psycopg2==2.9.5
+psycopg2-binary==2.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==19.0.1
+pycparser==2.21
 pydantic==2.10.6
+pydantic-extra-types==2.10.3
+pydantic-settings==2.8.1
 pydantic_core==2.27.2
+Pygments==2.17.2
+PyJWT==2.6.0
 pymongo==4.11.3
+pyparsing==3.2.1
+pyproject_hooks==1.0.0
+python-crontab==2.7.1
+python-dateutil==2.8.2
+python-dotenv==1.1.0
+python-multipart==0.0.20
+python3-openid==3.2.0
+pytz==2022.7.1
+pywin32==306
+pywin32-ctypes==0.2.2
+PyYAML==6.0
+pyzmq==25.1.2
+rapidfuzz==3.5.2
+redis==4.5.1
+regex==2024.11.6
+requests==2.28.2
+requests-oauthlib==1.3.1
+requests-toolbelt==1.0.0
+rich==13.9.4
+rich-toolkit==0.14.0
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.13.1
+shellingham==1.5.4
+shortuuid==1.0.11
+six==1.16.0
 sniffio==1.3.1
+social-auth-app-django==5.1.0
+social-auth-core==4.4.0
+sqlparse==0.4.3
+stack-data==0.6.3
 starlette==0.46.1
+sympy==1.13.1
+tablib==3.3.0
+threadpoolctl==3.6.0
+tokenizers==0.21.1
+toml==0.10.2
+tomli==2.0.1
+tomlkit==0.12.2
+torch==2.6.0
+tornado==6.4
+tqdm==4.67.1
+traitlets==5.14.1
+transformers==4.50.3
+trove-classifiers==2023.11.9
+typer==0.15.2
 typing_extensions==4.13.0
+tzdata==2022.7
+ujson==5.10.0
+urllib3==1.26.15
 uvicorn==0.34.0
+vine==5.0.0
+virtualenv==20.24.6
+watchfiles==1.0.4
+wcwidth==0.2.6
+websockets==15.0.1
+wsproto==1.2.0
+xlrd==2.0.1
+xlwt==1.3.0
+xxhash==3.5.0
+yarl==1.18.3
+zipp==3.17.0
